fixed footer z-index, added padding to portfolio pictures when width < 768px

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -6,6 +6,7 @@
     height:30px;
     border-top: 3px solid #4aaaa5;
     margin-top:20px;
+    z-index:4;
 }
 
 #copy-box{
