--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -81,6 +81,20 @@ body{
     margin-left:10px;
 }
 
+@media only screen and (max-width: 768px) {
+    #portfolio-row: {
+        padding-top:0px;
+        padding-right:0px;
+        padding-bottom:0px;
+        padding-left:0px;
+
+        margin-top:0px;
+        margin-right:0px;
+        margin-bottom:0px;
+        margin-left:0px;
+    }
+}
+
 #portfolio-column{
     padding-top:0px;
     padding-right:0px;
@@ -94,28 +108,20 @@ body{
     
 }
 
-
-/*
-#container-1{
-    position:relative;
-    z-index:1;
-
+@media only screen and (max-width: 768px) {
+    #portfolio-column {
     padding-top:0px;
     padding-right:0px;
     padding-bottom:0px;
     padding-left:0px;
 
     margin-top:0px;
-    margin-right:0px;
+    margin-right:20px;
     margin-bottom:10px;
     margin-left:0px;
-  
-    width:18%;
-    height:12%;
-  
-    background-color:green;
+        
+    }
 }
-*/
 
 #portfolio-picture{
     
